fix: changed title and added styles for fonts

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="pages/index.css" />
-    <title>Document</title>
+    <title>Путешествия по России</title>
   </head>
   <body class="page">
     <div class="wrapper">
