--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="fonts/fonts.css" />
     <link rel="stylesheet" href="pages/index.css" />
     <title>Путешествия по России</title>
   </head>
@@ -12,12 +11,16 @@
     <div class="wrapper">
       <header class="header">
         <a class="header__logo" href="#"></a>
-        <div class="header__lang-selector">
-          <a class="header__lang-link" href="#">Ru</a
-          ><a class="header__lang-link header__lang-link_noneactive" href="#"
-            >En</a
-          >
-        </div>
+        <ul class="header__lang-selector">
+          <li>
+            <a class="header__lang-link header__lang-link_active" href="#"
+              >Ru</a
+            >
+          </li>
+          <li>
+            <a class="header__lang-link" href="#">En</a>
+          </li>
+        </ul>
       </header>
       <main class="content">
         <section class="lead">
