--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
           <p class="lead__subtitle">
             Настоящая страна не в выпусках новостей, а здесь.
           </p>
-          <img src="./images/lead-polka.jpg" alt="" class="lead__image" />
-          <p class="lead__caption">ваша полка — верхняя</p>
+          <figure class="lead__figure">
+            <img src="./images/lead-polka.jpg" alt="" class="lead__image" />
+            <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+          </figure>
         </section>
         <section class="intro">
           <h2 class="intro__title">Чего мы там не видели?</h2>
