fix: added photo_grid ul and cover__overlay bg

--- a/index.html
+++ b/index.html
@@ -71,56 +71,93 @@
             </li>
           </ul>
         </section>
-        <section class="photo-grid">
-          <img
-            src="./images/photo-grid-train.jpg"
-            alt="Вид из окна"
-            class="photo-grid__item"
-          /><img
-            src="./images/photo-grid-atharva-tulsi.jpg"
-            alt="Горы в облаках"
-            class="photo-grid__item"
-          /><img
-            src="./images/photo-grid-tuman.jpg"
-            alt="Поле в тумане"
-            class="photo-grid__item"
-          /><img
-            src="./images/photo-grid-sochi.jpg"
-            alt="Лес в тумане"
-            class="photo-grid__item"
-          /><img
-            src="./images/photo-grid-arisa.jpg"
-            alt="Автомобиль на льду"
-            class="photo-grid__item"
-          /><img
-            src="./images/photo-grid-baikal.jpg"
-            alt="Берег байкала"
-            class="photo-grid__item"
-          /><img
-            src="./images/photo-grid-elbrus.jpg"
-            alt="Эльбрус"
-            class="photo-grid__item"
-          /><img
-            src="./images/photo-grid-kondratiev.jpg"
-            alt="Указатель пешеходного перехода"
-            class="photo-grid__item"
-          /><img
-            src="./images/photo-grid-kamchatka-1.jpg"
-            alt="Горы камчатки"
-            class="photo-grid__item"
-          /><img
-            src="./images/photo-grid-kamchatka-2.jpg"
-            alt="Еще немного гор камчатки"
-            class="photo-grid__item"
-          /><img
-            src="./images/photo-grid-baikal-2.jpg"
-            alt="Горы байкала"
-            class="photo-grid__item"
-          /><img
-            src="./images/photo-grid-ergaki.jpg"
-            alt="Горы в тумане"
-            class="photo-grid__item"
-          />
+        <section>
+          <ul class="photo-grid">
+            <li>
+              <img
+                src="./images/photo-grid-train.jpg"
+                alt="Вид из окна"
+                class="photo-grid__item"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/photo-grid-atharva-tulsi.jpg"
+                alt="Горы в облаках"
+                class="photo-grid__item"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/photo-grid-tuman.jpg"
+                alt="Поле в тумане"
+                class="photo-grid__item"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/photo-grid-sochi.jpg"
+                alt="Лес в тумане"
+                class="photo-grid__item"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/photo-grid-arisa.jpg"
+                alt="Автомобиль на льду"
+                class="photo-grid__item"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/photo-grid-baikal.jpg"
+                alt="Берег байкала"
+                class="photo-grid__item"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/photo-grid-elbrus.jpg"
+                alt="Эльбрус"
+                class="photo-grid__item"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/photo-grid-kondratiev.jpg"
+                alt="Указатель пешеходного перехода"
+                class="photo-grid__item"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/photo-grid-kamchatka-1.jpg"
+                alt="Горы камчатки"
+                class="photo-grid__item"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/photo-grid-kamchatka-2.jpg"
+                alt="Еще немного гор камчатки"
+                class="photo-grid__item"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/photo-grid-baikal-2.jpg"
+                alt="Горы байкала"
+                class="photo-grid__item"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/photo-grid-ergaki.jpg"
+                alt="Горы в тумане"
+                class="photo-grid__item"
+              />
+            </li>
+          </ul>
         </section>
         <section class="places">
           <article class="place">
@@ -271,11 +308,7 @@
           </article>
         </section>
         <section class="cover">
-          <img
-            class="cover__background"
-            src="./images/cover-trains.jpg"
-            alt="Железнодорожная развязка"
-          />
+          <div class="cover__background"></div>
           <a
             href="https://stampsy.com/na-elektrichkakh-do-baikala"
             target="_blank"
