fix media for places

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             </li>
           </ul>
         </section>
-        <section>
-          <ul class="photo-grid">
+        <section class="photo-grid">
+          <ul class="photo-grid__list">
             <li>
               <img
                 src="./images/photo-grid-train.jpg"
