--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="pages/index.css" />
     <title>Путешествие по России</title>
   </head>
   <body class="page">
@@ -29,7 +28,7 @@
             Настоящая страна не в выпусках новостей, а здесь.
           </p>
           <figure class="lead__figure">
-            <img src="./images/lead-polka.jpg" alt="" class="lead__image" />
+            <img src="<%=require('./images/lead-polka.jpg')%>" alt="" class="lead__image" />
             <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
           </figure>
         </section>
@@ -75,84 +74,84 @@
           <ul class="photo-grid__list">
             <li>
               <img
-                src="./images/photo-grid-train.jpg"
+                src="<%=require('./images/photo-grid-train.jpg')%>"
                 alt="Вид из окна"
                 class="photo-grid__item"
               />
             </li>
             <li>
               <img
-                src="./images/photo-grid-atharva-tulsi.jpg"
+                src="<%=require('./images/photo-grid-atharva-tulsi.jpg')%>"
                 alt="Горы в облаках"
                 class="photo-grid__item"
               />
             </li>
             <li>
               <img
-                src="./images/photo-grid-tuman.jpg"
+                src="<%=require('./images/photo-grid-tuman.jpg')%>"
                 alt="Поле в тумане"
                 class="photo-grid__item"
               />
             </li>
             <li>
               <img
-                src="./images/photo-grid-sochi.jpg"
+                src="<%=require('./images/photo-grid-sochi.jpg')%>"
                 alt="Лес в тумане"
                 class="photo-grid__item"
               />
             </li>
             <li>
               <img
-                src="./images/photo-grid-arisa.jpg"
+                src="<%=require('./images/photo-grid-arisa.jpg')%>"
                 alt="Автомобиль на льду"
                 class="photo-grid__item"
               />
             </li>
             <li>
               <img
-                src="./images/photo-grid-baikal.jpg"
+                src="<%=require('./images/photo-grid-baikal.jpg')%>"
                 alt="Берег байкала"
                 class="photo-grid__item"
               />
             </li>
             <li>
               <img
-                src="./images/photo-grid-elbrus.jpg"
+                src="<%=require('./images/photo-grid-elbrus.jpg')%>"
                 alt="Эльбрус"
                 class="photo-grid__item"
               />
             </li>
             <li>
               <img
-                src="./images/photo-grid-kondratiev.jpg"
+                src="<%=require('./images/photo-grid-kondratiev.jpg')%>"
                 alt="Указатель пешеходного перехода"
                 class="photo-grid__item"
               />
             </li>
             <li>
               <img
-                src="./images/photo-grid-kamchatka-1.jpg"
+                src="<%=require('./images/photo-grid-kamchatka-1.jpg')%>"
                 alt="Горы камчатки"
                 class="photo-grid__item"
               />
             </li>
             <li>
               <img
-                src="./images/photo-grid-kamchatka-2.jpg"
+                src="<%=require('./images/photo-grid-kamchatka-2.jpg')%>"
                 alt="Еще немного гор камчатки"
                 class="photo-grid__item"
               />
             </li>
             <li>
               <img
-                src="./images/photo-grid-baikal-2.jpg"
+                src="<%=require('./images/photo-grid-baikal-2.jpg')%>"
                 alt="Горы байкала"
                 class="photo-grid__item"
               />
             </li>
             <li>
               <img
-                src="./images/photo-grid-ergaki.jpg"
+                src="<%=require('./images/photo-grid-ergaki.jpg')%>"
                 alt="Горы в тумане"
                 class="photo-grid__item"
               />
@@ -167,7 +166,7 @@
               <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
             </div>
             <img
-              src="./images/place-kosa.jpg"
+              src="<%=require('./images/place-kosa.jpg')%>"
               alt="Побережье косы"
               class="place__image"
             />
@@ -199,7 +198,7 @@
               >
             </div>
             <img
-              src="./images/place-kolsky.jpg"
+              src="<%=require('./images/place-kolsky.jpg')%>"
               alt="Заснеженные горы"
               class="place__image"
             />
@@ -231,7 +230,7 @@
               >
             </div>
             <img
-              src="./images/place-altai.jpg"
+              src="<%=require('./images/place-altai.jpg')%>"
               alt="Ноутбук на фоне леса"
               class="place__image"
             />
@@ -261,7 +260,7 @@
               >
             </div>
             <img
-              src="./images/place-winter-baikal.jpg"
+              src="<%=require('./images/place-winter-baikal.jpg')%>"
               alt="Трещены во льду"
               class="place__image"
             />
@@ -290,7 +289,7 @@
               >
             </div>
             <img
-              src="./images/place-karelia.jpg"
+              src="<%=require('./images/place-karelia.jpg')%>"
               alt="Водоем и лес"
               class="place__image"
             />
@@ -370,5 +369,6 @@
         <p class="footer__copyright">&copy; 2022 Алексей К. Allxy</p>
       </footer>
     </div>
+    <div class="popup"><div>dsdas</div></div>
   </body>
 </html>
