feat: image popup

--- a/src/index.html
+++ b/src/index.html
@@ -369,6 +369,12 @@
         <p class="footer__copyright">&copy; 2022 Алексей К. Allxy</p>
       </footer>
     </div>
-    <div class="popup"><div>dsdas</div></div>
+    <div class="popup popup-image popup_opened">
+      <div class="popup__image-view">
+        <button type="button" class="popup__close-btn" title="Закрыть"></button>
+        <img class="popup__image" src="." alt="Попап картинки" />
+        <p class="popup__img-caption"></p>
+      </div>
+    </div>
   </body>
 </html>
