--- a/src/index.html
+++ b/src/index.html
@@ -369,7 +369,7 @@
         <p class="footer__copyright">&copy; 2022 Алексей К. Allxy</p>
       </footer>
     </div>
-    <div class="popup popup-image popup_opened">
+    <div class="popup popup-image">
       <div class="popup__image-view">
         <button type="button" class="popup__close-btn" title="Закрыть"></button>
         <img class="popup__image" src="." alt="Попап картинки" />
